# rustflix

./: .env  Cargo.toml
.docker/: Dockerfile.dev  docker-compose.yml
documents/: basic_design.md  detailed_design.md
migrations/: 20240813050929_create_users_table.sql
src/: lib.rs  main.rs
