[package]
name = "rustflix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres"] }
redis = { version = "0.22.0", features = ["tokio-comp"] }
